k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gloss-production
  labels:
    name: gloss-production
    environment: production
---
apiVersion: v1
kind: Namespace
metadata:
  name: gloss-staging
  labels:
    name: gloss-staging
    environment: staging
